--- a/nextfrotend/package.json
+++ b/nextfrotend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/next-js": "^2.4.2",
     "@chakra-ui/react": "^2.10.2",
     "@emotion/react": "^11.13.3",
@@ -16,6 +17,7 @@
     "@prisma/client": "5.19.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/hast": "^3.0.4",
+    "@types/react-redux": "^7.1.34",
     "file-loader": "^6.2.0",
     "framer-motion": "^11.11.7",
     "groq-sdk": "^0.7.0",
@@ -24,6 +26,7 @@
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
